--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         </ul>
       </div>
       <div class="items-center gap-2 hidden md:flex">
-        <a class="btn border rounded-[100%] bg-white h-[60px] w-[60px]">
+        <a class="btn border rounded-[100%] bg-white h-[50px] w-[50px]">
           <div>
             <i class="fa-solid fa-magnifying-glass text-sm"></i>
           </div>
         </a>
-        <a class="btn border rounded-[100%] bg-white h-[60px] w-[60px]">
+        <a class="btn border rounded-[100%] bg-white h-[50px] w-[50px]">
           <div>
             <i class="fa-solid fa-cart-shopping text-sm"></i>
           </div>
@@ -150,7 +150,10 @@
     <section class=" py-16">
       <div class="container mx-auto px-6">
         <div class="flex flex-col lg:flex-row items-center">
+
+
           <!-- Image sec added -->
+
           <div class="lg:w-1/2 mb-8 lg:mb-0">
             <img src="assets/simple-home.png" class="rounded-lg shadow-lg">
           </div>
@@ -158,7 +161,7 @@
           <!-- Text sec here -->
 
           <div class="lg:w-1/2 lg:pl-12">
-            <h2 class="text-3xl font-bold text-gray-800 mb-4">Beautiful Home Designs</h2>
+            <h2 class="text-3xl font-bold text-gray-800 mb-4">Dream Home Designs</h2>
             <p class="text-gray-500 mb-6">
               Discover the perfect design for your dream home. Our team of professional designers and architects are dedicated to creating unique and innovative spaces that reflect your personal style and needs.
             </p>
@@ -173,6 +176,7 @@
 
 
     <!-- Thoughtfull sec added -->
+
     <section class="w-[85%] mx-auto lg:flex lg:justify-between ">
       <div class="py-6 lg:py-12 lg:w-1/2">
         <div class="relative text-center lg:text-left">
@@ -400,7 +404,7 @@ A well-defined concept provides direction, clarity, purpose, and innovative thin
       </div>
       <div class="items-center gap-2 flex my-5 ">
         <a class="btn w-[250px] hover:bg-green-400 bg-color_primary">
-          <div class="flex flex-row-reverse">
+          <div class="flex flex-row-reverse gap-[10px]">
             <div class="flex justify-center items-center rounded-[50%] bg-black w-7 h-7">
               <i class="fa-solid fa-arrow-right" style="rotate: -45deg; color: white"></i>
             </div>
