third commit spacing added

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <!-- challenge sec added here -->
 
-    <section class=" py-16">
+    <section class=" py-16 mb-[50px]">
       <div class="container mx-auto px-6">
         <div class="flex flex-col lg:flex-row items-center">
 
