--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
       </div>
     </section>
   </header>
-  <main class="bg-[#F4F4F4]">
+
+  
+  <main class="bg-[#eee9e9]">
 
 
 
@@ -188,7 +190,7 @@
     
 
 
-    <!-- Thoughtfull sec added -->
+    <!-- Thoughtful sec added -->
 
     <section class="w-[85%] mx-auto lg:flex lg:justify-between ">
       <div class="py-6 lg:py-12 lg:w-1/2">
@@ -202,26 +204,26 @@
             We design thoughtful,<br />liveable spaces
           </h1>
           <br />
-          <p class="text-gray-500">
+          <p class="text-gray-500 mb-2">
             "A thoughtful design seamlessly combines aesthetics, functionality, sustainability, and innovation to create a harmonious space."
           </p>
-        </div>
-        <div class="flex py-3 ">
-          <div >
+        </div><br>
+        <div class="flex py-3 border-2 rounded-[10px] mb-3 pb-[10px] bg-slate-50">
+          <div class="ml-3">
             <img src="assets/commercial.png" alt="" />
           </div>
-          <div class="ml-3 ">
+          <div class="ml-5 lg:text-sm">
             <h4 class="text-lg font-extrabold ">Commercial</h4>
             <p class="text-gray-500">
               Modern and sleek commercial building design emphasizes efficiency and innovation.
             </p>
           </div>
         </div>
-        <div class="flex ">
-          <div>
+        <div class="flex border-2 py-3 rounded-[10px] bg-slate-50">
+          <div class="ml-3">
             <img src="assets/residential.png" alt="" />
           </div>
-          <div class="ml-3">
+          <div class="ml-5 lg:text-sm">
             <h4 class="text-lg font-extrabold">Residential</h4>
             <p class="text-gray-500">
               Modern residential design blends elegance, comfort, functionality, and sustainability.
@@ -229,7 +231,7 @@
           </div>
         </div>
       </div>
-      <div class="py-12 w-[1/3] ">
+      <div class="py-12 lg:w-[50%] ml-6">
         <img src="assets/home-design.png" alt="" class="mx-auto rounded-xl" />
       </div>
     </section>
