some part modified

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               Discover the perfect design for your dream home. Our team of professional designers and architects are dedicated to creating unique and innovative spaces that reflect your personal style and needs.
             </p>
             <a class="btn bg-color_sec py-2 px-6 rounded-full font-bold hover:bg-color_primary">
-              Contact Us
+              Get Started
             </a>
           </div>
         </div>
@@ -196,9 +196,9 @@
       <div class="py-6 lg:py-12 lg:w-1/2">
         <div class="relative text-center lg:text-left">
           <div class="absolute -top-[20%] -left-[7%] hidden lg:block">
-            <img src="assets/Vector.png" alt="" />
+            <img class="" src="assets/Vector.png" alt="" />
           </div>
-          <a class="btn mb-3 bg-white">
+          <a class="btn mt-[10px] mb-3 bg-white">
             <i class="fa-solid fa-arrow-right"></i> About Us </a><br />
           <h1 class="text-4xl font-extrabold">
             We design thoughtful,<br />liveable spaces
@@ -231,7 +231,7 @@
           </div>
         </div>
       </div>
-      <div class="py-12 lg:w-[50%] ml-6">
+      <div class="py-12 lg:w-[50%] ml-7">
         <img src="assets/home-design.png" alt="" class="mx-auto rounded-xl" />
       </div>
     </section>
