changed some issues

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <p class="text-gray-500 mb-6 ">
               Discover the perfect design for your dream home. Our team of professional designers and architects are dedicated to creating unique and innovative spaces that reflect your personal style and needs.
             </p>
-            <a class="btn bg-color_sec py-2 px-6 rounded-full font-bold hover:bg-color_primary">
+            <a class="btn bg-green-500 py-2 px-6 rounded-full font-bold hover:bg-color_primary">
               Get Started
             </a>
           </div>
